@@ -1,4 +1,4 @@
 DIST rlwrap-0.24.tar.gz 150698 RMD160 9eff05500a258b921a67ff71b501e466c4757c20 SHA1 55e4dab20bbfec8899fd64c2d80ed05264d45490 SHA256 f2ad78abf9ae30ca610e875a69fbcaa2fdf0d8450ddc266efb24cf1590f031a2
-EBUILD rlwrap-0.24.ebuild 739 RMD160 5bd38ea80f4837033943df5280d75abf17dd0db7 SHA1 04a18f1840180ae44ee4c53f266564f9dd2b72ce SHA256 3b0d3f252d59d7db36210df788e82d43bc5720382c9e196b1516b2049b96d1ba
-MISC ChangeLog 1346 RMD160 9efaf2b297747fc7301dfcb8c9b5469a7a0f1a53 SHA1 68204d95fcb26c01aa1237f1d0c74d309a55551c SHA256 12d2e360e6ada5633e6180999eea4f0bcf2dc603159ea0ac36785989804503cf
+EBUILD rlwrap-0.24.ebuild 760 RMD160 b726baf01770cb069bf31fa28d597f5787e3eaf5 SHA1 c7475a1f74bd5c33f65771bb2756d0035659dc71 SHA256 a65d826227543135cbdf7396d7e455e9b6a47a04c98b208cd8d0750738e301d6
+MISC ChangeLog 1442 RMD160 dc3efaade2afe8721b1685c80906194a09fb92d4 SHA1 6939341c9518f85ff9788da21d62d16e6f5f3862 SHA256 35e6f0fb35877c97d67f2a55bcd3ae052a56cbb1eb3591848f126ae7f02ac319
 MISC metadata.xml 542 RMD160 613f500888d2f1a68573865c1fc743aa83e82df0 SHA1 660e75103690a6d7d1675076f0611aaadc324849 SHA256 c1cf0f30b47048750c1e51345caeb3a14b6f88cfbf9fb57e8ae98a9d1f45906c
