@@ -1,11 +1,11 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/rlwrap-0.24.ebuild,v 1.4 2007/07/12 03:35:11 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/rlwrap-0.24.ebuild,v 1.5 2007/12/08 16:34:07 drac Exp $
 
 EAPI="prefix"
 
 DESCRIPTION="a 'readline wrapper' which uses the GNU readline lib to allow the editing of keyboard input for any command"
-HOMEPAGE="http://utopia.knoware.nl/~hlub/uck/rlwrap/"
+HOMEPAGE="http://utopia.knoware.nl/~hlub/uck/rlwrap"
 SRC_URI="http://utopia.knoware.nl/~hlub/uck/rlwrap/${P}.tar.gz"
 
 LICENSE="GPL-2"
@@ -17,10 +17,10 @@ DEPEND="sys-libs/readline"
 
 src_compile() {
 	econf $(use_enable debug)
-	emake || die
+	emake || die "emake failed."
 }
 
 src_install() {
-	einstall || die
-	dodoc AUTHORS BUGS ChangeLog INSTALL NEWS README
+	einstall || die "einstall failed."
+	dodoc AUTHORS BUGS ChangeLog NEWS README
 }
